[tool.poetry]
name = "sunspecdemo"
version = "0.1.95.post1.dev0+a38984c"
description = "EPC SunSpec demonstration tool"
authors = ["Alex Anker <alex.anker@epcpower.com>"]
license = "MIT"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/sunspecdemo/__init__.py"]

[tool.poetry.dependencies]
python = "3.7.9"
attrs = ">=19.3.0"
click = "^7.0"
toolz = "0.9.0"
tqdm = "4.32.1"
#must change this back to a verison before merging
pysunspec = {git = "https://github.com/altendky/pysunspec", rev = "edb9f3f5eead2e50f20c0b752f10695fa0e8be23"}
#pysunspec = "2.0.0"
setuptools = ">=53.0.0"
toml = "^0.10.2"
importlib = "^1.0.4"
importlib-metadata = "^4.10.1"
typing-extensions = "^4.0.1"
pyserial = "3.4"

[tool.poetry.dev-dependencies]
gitignoreio = "0.1.5"
pyinstaller = "4.2"
poetry-dynamic-versioning = "^0.13.1"

[tool.poetry.scripts]
sunspecdemo = 'sunspecdemo.cli:cli'

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning",]
build-backend = "poetry.core.masonry.api"
