[tool.poetry]
name = "sunspecdemo"
# For development and git commit, the __version__ variable below is set
# The version variable below is set to the generic build placeholder "0.0.0".
# (In other words: leave alone!) During CI, poetry dynamic versioning
# modifies the __version__ variable in the applicable __init__.py file.
version = "0.0.0"
description = "EPC SunSpec demonstration tool"
authors = ["Alex Anker <alex.anker@epcpower.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
#poetry auto substitution doesnt cover init files 2 directories past root
files = ["src/sunspecdemo/__init__.py"]

[tool.poetry.dependencies]
python = ">=3.7.9,<3.11"
attrs = ">=19.3.0"
click = "^7.0"
toolz = "0.9.0"
tqdm = "4.32.1"
pysunspec = "2.1.0"
setuptools = ">=53.0.0"
toml = "^0.10.2"
#importlib = "^1.0.4"  #https://github.com/epcpower/sunspec-demo/actions/runs/2041856998 This randomly started failing.  Only for python 3.0 and older, leaving commented.
#importlib-metadata = "^4.10.1"
typing-extensions = "^4.0.1"
pyserial = "3.4"

[tool.poetry.dev-dependencies]
gitignoreio = "0.1.5"
pyinstaller = "4.4"


[tool.poetry.scripts]
sunspecdemo = 'sunspecdemo.cli:cli'

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning",]
build-backend = "poetry_dynamic_versioning.backend"
