[metadata]
name = epcsunspecdemo
version = attr: epcsunspecdemo.__version__
description = EPC SunSpec demonstration tool
author = EPC Power Corporation
url = https://epcpower.com/
project_urls =
    Source=https://github.com/epcpower/sunspec-demo
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
include_package_data = True
zip_safe = False
package_dir = =src
packages = find:
install_requires =
    attrs == 18.2.0
    click == 8.0
    gitignoreio == 0.1.5
    pysunspec ~= 2.1.0
    toolz == 0.9.0
    tqdm == 4.32.1

[options.packages.find]
where = src

[options.extras_require]
; All the extra tools used to help with the development process.
development =
    gitignoreio == 0.1.5

[options.entry_points]
console_scripts =
    epcsunspecdemo = epcsunspecdemo.cli:cli

[versioneer]
VCS = git
style = pep440
versionfile_source = src/epcsunspecdemo/_version.py
versionfile_build = epcsunspecdemo/_version.py
tag_prefix = v
